<resources>
    <string name="app_name">Zip Weather</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details">ActivityDetails</string>
    <string name="get_current_weather_conditions_of_zip_codes_in_usa">Get Current Weather Conditions from ZIP Codes in USA</string>
    <string name="zip_code">ZIP Code</string>
    <string name="recent_searches">Recent Searches Cities</string>
    <string name="weather">WEATHER</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="action_clear_recents">Clear Recent</string>
    <string name="show_favorites">Show Favorites</string>
    <string name="add_favorites">Add to Favorites</string>
</resources>
