<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ActivityMain"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/app_round_blue"
        android:padding="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:singleLine="false"
        android:text="@string/get_current_weather_conditions_of_zip_codes_in_usa"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/edit_zip_code"
        android:layout_width="126dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:ems="5"
        android:hint="@string/zip_code"
        android:imeOptions="actionSearch"
        android:inputType="number"
        android:linksClickable="false"
        android:longClickable="false"
        android:maxLength="5"
        android:nestedScrollingEnabled="false"
        android:saveEnabled="false"
        android:scrollHorizontally="false"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:singleLine="true"
        android:textColorLink="@android:color/holo_blue_light"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        app:backgroundTint="@android:color/holo_blue_bright"
        app:layout_constraintStart_toEndOf="@+id/edit_zip_code"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="?android:attr/actionModeWebSearchDrawable" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/edit_zip_code"
        tools:layout_editor_absoluteX="12dp" />

    <TextView
        android:id="@+id/text_last_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/recent_searches"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:layout_editor_absoluteX="12dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_last_search"
        tools:layout_editor_absoluteX="20dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_last_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </ScrollView>

</android.support.constraint.ConstraintLayout>