<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ActivityDetails"
    tools:showIn="@layout/activity_details">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/weather" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="292dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_conditions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Partly Cloudy"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteX="8dp"
                        tools:layout_editor_absoluteY="417dp" />

                    <TextView
                        android:id="@+id/text_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:editable="false"
                        android:singleLine="false"
                        android:text="Shower 20% Hight 91F. Winds SSW at 10 to 20 mph"
                        android:textAllCaps="false" />
                </LinearLayout>

                <TextView

                    android:id="@+id/text_temperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="top|right"
                    android:text="80"
                    android:textSize="48sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="86dp"
                    tools:layout_editor_absoluteY="89dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="top|right"
                    android:text="o"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/text_temp_unit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="top|left"
                    android:text="F"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="292dp">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wind_speed"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="86dp"
                    tools:layout_editor_absoluteY="89dp" />

                <TextView
                    android:id="@+id/text_wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1 m/s"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="292dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/claudiness"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="86dp"
                    tools:layout_editor_absoluteY="89dp" />

                <TextView
                    android:id="@+id/text_cloudiness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Temporal Artery"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="292dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pressure"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="86dp"
                    tools:layout_editor_absoluteY="89dp" />

                <TextView
                    android:id="@+id/text_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1035 hpa"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="292dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/humidity"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="86dp"
                    tools:layout_editor_absoluteY="89dp" />

                <TextView
                    android:id="@+id/text_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="93%"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="292dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    tools:layout_editor_absoluteX="68dp"
                    tools:layout_editor_absoluteY="445dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sunrise"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteX="86dp"
                        tools:layout_editor_absoluteY="89dp" />

                    <TextView
                        android:id="@+id/text_sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6:45 AM"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    tools:layout_editor_absoluteX="68dp"
                    tools:layout_editor_absoluteY="445dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/sunset"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteX="86dp"
                        tools:layout_editor_absoluteY="89dp" />

                    <TextView
                        android:id="@+id/text_sunset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="7:32 PM"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>